--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <div class="head">
 
-        <div class="romb"><img src="./img/Group 12.png" alt=""></div>
+        <div class="pipec"><div class="romb"><img src="./img/Group 12.png" alt=""></div></div>
 
         <div class="container">
 
@@ -77,7 +77,25 @@
     
     </div>
 
+    <!-- создание 2-го раздела -->
 
+    <div class="container">
+
+        <div class="relax" id="present">
+            <div class="adventure-left">
+                <h2>RELAX AND ENJOY</h2>
+                <h1>Unforgettable <br> Adventure</h1>
+                <p>Welcome to our travel guide, dedicated to the enchanting landscapes and rich culture of Cyprus. We're passionate about revealing Cyprus hidden gems, from Istanbul's vibrant bazaars to the tranquil Cyprus  coast.</p>
+                <div class="button">
+                    <button>BOOK A TRIP</button>
+                </div>
+            </div>
+            <div class="adventure-right">
+                <img class="img1" src="./img/Images (1).png" alt="">
+            </div>
+        </div>
+
+    </div>
 
 </body>
 </html>
