--- a/index.html
+++ b/index.html
@@ -119,5 +119,61 @@
 
     
 
+    <div class="container">
+
+        <!-- создание 4-го раздела -->
+
+        <div class="blog" id="blog">
+            <h1>Blog about our travels. </h1>
+            <h2>The most vivid impressions</h2>
+            <div class="group"><img src="./img/Group 3.png" alt=""></div>
+            <p>Photos, videos, articles, and reviews from our clients</p>
+            <div class="grid">
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+                <div class="grid-el">
+                    <div class="fg">
+                        <p>Traveling <br> With us</p>
+                        <img src="./img/Group 9.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="button">
+                <button>BOOK A TRIP</button>
+            </div>
+        </div>
+
+    </div>
+
+    
+
 </body>
 </html>
