--- a/index.html
+++ b/index.html
@@ -244,6 +244,47 @@
         </div>
     </div>
 
+    <!-- создание 6-го раздела -->
 
+    <div class="container">
+        <div class="join">
+            <h1>Join to new Journey</h1>
+            <div class="img"><img src="./img/Group 3 (1).png" alt=""></div>
+            <p>Call to us to register your trip/</p>
+            <div class="anketa">
+                <div class="name">
+                    <div class="ima">
+                        <p>Name</p>
+                        <input type="text" name="name"  placeholder="Enter your name" class="base">
+                    </div>
+                    <div class="tel">
+                        <p>Telephone</p>
+                        <input type="tel" name="name"  placeholder="+  _  _ _ _  _ _ _  _ _  _ _" class="base">
+                    </div>
+                </div>
+                <div class="e-mail">
+                    <p>E-mail</p>
+                    <input type="email" name="name"  placeholder="Entrez votre courrier" class="base2">
+                </div>
+                <div class="input">
+                    <p>Your goal</p>
+                    <input type="radio" name="name" class="nobase">
+                    <label for="" class="labelbase">Rest</label>
+                    <input type="radio" name="name" class="nobase">
+                    <label for="" class="labelbase">Quitter</label>
+                    <input type="radio" name="name"class="nobase">
+                    <label for="" class="labelbase">Autre objectif</label><br>
+                    <input type="checkbox" name="name">
+                    <label for="" class="labelbase1">J'accepte le traitement de mes données personnelles</label>
+                </div>
+            </div>
+            <div class="baton">
+                <div class="button">
+                    <button>Continuer</button>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
