--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="adventure-left">
                 <h2>RELAX AND ENJOY</h2>
                 <h1>Unforgettable <br> Adventure</h1>
-                <p>Welcome to our travel guide, dedicated to the enchanting landscapes and rich culture of Cyprus. We're passionate about revealing Cyprus hidden gems, from Istanbul's vibrant bazaars to the tranquil Cyprus  coast.</p>
+                <div class="text"><p>Welcome to our travel guide, dedicated to the enchanting landscapes and rich culture of Cyprus. We're passionate about revealing Cyprus hidden gems, from Istanbul's vibrant bazaars to the tranquil Cyprus  coast.</p></div>
                 <div class="button">
                     <button>BOOK A TRIP</button>
                 </div>
@@ -108,10 +108,10 @@
             <p>The most beautiful places and unforgettable nature</p>
             <div class="play"><img src="./img/Button Play.png" alt=""></div>
             <div class="imgs">
-                <img src="./img/Advantage.png" alt="">
-                <img src="./img/Component 3.png" alt="">
-                <img src="./img/Component 4.png" alt="">
-                <img src="./img/Component 5.png" alt="">
+                <div class="img"><img class="img1" src="./img/Advantage.png" alt=""></div>
+                <div class="img"><img class="img2" src="./img/Component 3.png" alt=""></div>
+                <div class="img"><img class="img3" src="./img/Component 4.png" alt=""></div>
+                <div class="img"><img class="img4" src="./img/Component 5.png" alt=""></div>
             </div>
         </div>
 
